# poetry-update

./: LICENSE  README.md  pyproject.toml
poetry_update/: cli.py  core.py
tests/: test_core.py
